# DIVA

./: .gitignore  .readthedocs.yml  CMakeLists.txt  Dockerfile  Dockerfile.wheel  LICENSE.txt  README.rst  setup.py
CMake/: Findpybind11.cmake  add_project_fletch.cmake  add_project_kwant.cmake  add_project_kwiver.cmake  common_macros.cmake  diva-config.cmake.in  diva-sphinx.cmake  diva_macros.cmake  python.cmake  setup_DIVA.build.bat.in  setup_DIVA.build.sh.in  setup_DIVA.install.bat.in  setup_DIVA.install.sh.in  setup_DIVA.sh.in  start_MSVC.bat.in  superbuild.cmake
CMake/templates/doxygen/: Doxyfile.common.in
CMake/templates/sphinx/: conf.py.in
algo/optical_flow/: CMakeLists.txt  optical_flow.cpp
doc/: CMakeLists.txt  requirements.txt
doc/manuals/: Makefile  README  README.md  algorithm.rst  annotation.rst  annotation_transfer.rst  annotation_visualization.rst  api.rst  architecture.rst  conf.py  data.rst  developing.rst  docker.rst  index.rst  install.rst  introduction.rst  kpf.rst  make.bat  pipelines.rst  processes.bib  processes.rst  scoring.rst  sphinx_server.py  tools.rst  tutorials.rst  usecases.rst  vaui.rst
doc/manuals/_pipe/: darknet.dot  example_annotation_visualization.dot  image_sender.dot  optical_flow.dot
doc/manuals/_pipe/act/: act.dot  act_aod.dot  act_aod_zmq.dot  act_zmq.dot
doc/manuals/_pipe/rc3d/: rc3d.dot  rc3d_zmq.dot
doc/manuals/_templates/: layout.html
doc/manuals/doxy_template/: rtd_min.cfg
doc/manuals/pipelines/: darknet.pipe  darknet.py  darknet_zmq.pipe  example_annotation_transfer.pipe  example_annotation_visualization.pipe
doc/manuals/processes/: register_processes.cxx  sample_process.cxx  sample_process.py
driver/: CMakeLists.txt  diva_kpf_darknet_example.cpp  diva_kpf_schema_examples.cpp  main.cpp
drivers/: CMakeLists.txt  main.cpp  score.sh.in
drivers/basic_experiment/: CMakeLists.txt  basic_experiment.cpp  basic_experiment.py
drivers/darknet_detections/: CMakeLists.txt  darknet_detections.cpp
drivers/darknet_training/: CMakeLists.txt  darknet_training.cpp
drivers/data/: darknet.config.in  image_experiment.kpf.in  image_experiment.yml.in  image_list.txt.in  video_experiment.kpf.in  video_experiment.yml.in
drivers/schema_examples/: CMakeLists.txt  schema_examples.cpp  schema_examples.py
drivers/system_script/: diva_system.py
etc/: darknet.config  image_experiment.yml  image_list.txt  input_stream.yml  rc3d_experiment.yml  rc3d_imglist.txt  video_experiment.yml
etc/ref-geom/: VIRAT_S_000206_04_000710_000779.reduced.geom.yml  VIRAT_S_000206_04_000710_000779.types.yml
example/: CMakeLists.txt  ReadMe.rst
pipelines/: act.pipe  act_aod.pipe  act_aod_receiver.pipe  act_receiver.pipe  act_visualize.pipe  darknet.pipe  darknet.sh  display.sh  image_sender.pipe  json_writer_receiver.pipe  optical_flow.pipe  optical_flow.sh  rc3d.pipe  rc3d.sh  rc3d_sender.pipe  setup_rc3d.sh  swimlane_receiver.pipe  test_experiment.pipe  test_experiment_receive.pipe  test_experiment_receive2.pipe  test_rc3d-pipe  test_rc3d.pipe  tmux_act.sh  tmux_act_aod.sh  tmux_image_sender.sh  tmux_localhost.sh  tmux_rc3d.sh  tmux_rc3d_act_aod.sh  tmux_receiver.sh  tmux_receiver_starter_script.sh  tmux_sender.sh  tmux_starter_script.sh  tmux_test_receiver.sh  tmux_test_sender.sh  visualizer_receiver.pipe
pipelines/act/: act.pipe  act.sh  act_aod.pipe  act_aod.sh  act_aod_viz.pipe  act_aod_zmq.pipe  act_viz.pipe  act_zmq.pipe  tmux_act.sh  tmux_act_aod.sh  tmux_act_aod_zmq.sh  tmux_act_zmq.sh
pipelines/dispatcher/: dispatcher.pipe
pipelines/rc3d/: rc3d.pipe  rc3d.sh  rc3d_viz.pipe  rc3d_zmq.pipe  tmux_rc3d.sh  tmux_rc3d_zmq.sh
processes/: CMakeLists.txt  diva_experiment_process.cxx  diva_experiment_process.h  register_processes.cxx
processes/diva_experiment/: CMakeLists.txt  diva_experiment_process.cxx  diva_experiment_process.h  register_processes.cxx
processes/optical_flow/: CMakeLists.txt  optical_flow_process.cxx  optical_flow_process.h  register_processes.cxx
processes/python/: CMakeLists.txt  R-C3D_process.py  act_image_reader.py  act_process.py  detset_receiver_process.py  detset_sender_process.py  merge_tubes.py  nist_json_writter.py  rc3d_json_writter.py  swimlane_process.py  test_reader.py  visualize_process.py
processes/python/act/: CMakeLists.txt  act_detector.py  act_image_reader.py  act_json_writer.py  act_process.py  act_visualize.py  act_visualizer.py  merge_tubes.py  modify_bbox_resolution.py
processes/python/dispatcher/: CMakeLists.txt  celery_config.py  dispatcher.py  tasks.py
processes/python/rc3d/: CMakeLists.txt  R-C3D_process.py  README.md  rc3d_detector.py  rc3d_json_writter.py  rc3d_process.py  rc3d_visualizer.py  swimlane_process.py  visualize_process.py
python/: CMakeLists.txt  setup.py
python/diva/: CMakeLists.txt
python/diva/arrows/: CMakeLists.txt  simple_draw_detected_object_set.py
python/diva/processes/: CMakeLists.txt  image_viewer_process.py  register_cpp_processes.py  simple_detector_process.py
python/diva/utils/: CMakeLists.txt  __init__.py  diva_python_activity.cxx  diva_python_geometry.cxx  diva_python_input.cxx  diva_python_label.cxx  diva_python_utils.cxx
scripts/: CMakeLists.txt
scripts/cli_helpers/: CMakeLists.txt  chunk_runner.py  cleanup_chunk.py  cleanup_experiment.py  generate_experiments.py  merge_videos.py
scripts/eo_to_ir/: eo_to_ir.py  eo_to_ir2.py  homog_annotate.py  time_offset.py  transfer.py
scripts/eo_to_ir/lib/: homography.py  transduce.py  utils.py  view.py
scripts/eo_to_ir/test/: test_1.geom.yml  (+15 more)
scripts/view_transfer/: camera_io.py  transfer_kw18.py
utils/: CMakeLists.txt  diva_activity.cxx  diva_activity.h  diva_exceptions.cxx  diva_exceptions.h  diva_experiment.cxx  diva_experiment.h  diva_geometry.cxx  diva_geometry.h  diva_input.cxx  diva_input.h  diva_label.cxx  diva_label.h  diva_packet.cxx  diva_packet.h  diva_region.cxx  diva_region.h
utils/python/: CMakeLists.txt  diva_python_activity.cxx  diva_python_experiment.cxx  diva_python_geometry.cxx  diva_python_input.cxx  diva_python_label.cxx  diva_python_packet.cxx  diva_python_utils.cxx
(+39 files in other folders)
